public/css/StyleMatters.2024.css
/* ... */
.gradient-blur::after {
content: "";
z-index: 8;
backdrop-filter: blur(64px);
mask: linear-gradient(
	to bottom,
	rgba(0, 0, 0, 0) 87.5%,
	rgba(0, 0, 0, 1) 100%
);
}

h1 {
	font-family: Archivo;
	font-weight: 700;
	letter-spacing: 0px;
	font-size: 40px;
	line-height: 1.2;
}

h2 {
	font-family: Archivo;
	font-weight: 700;
	letter-spacing: 0px;
	font-size: 32px;
	line-height: 1.2;
}

.folioBlock {
	background-color: rgba(255, 255, 255, 0.5);
	border-radius: 70px;
	width:100%;
	padding:0px;
	padding-top:30px;
}

.blockRow {
	overflow-x: scroll;
	width: 100%;
	height: 450px;
	background-color: #19B5FE;
}

.blockRowInner {
	width: 1360px;
	height: 450px;
}

.timeline {
	background-color: rgba(255, 255, 255, 0.5);
	border-radius: 80px;
	padding: 40px;
	max-width: 800px;
	width: 90%;
}

.timelineBlock {
	display: flex;
	flex-direction: row;
	gap: 24px;
	overflow-x: hidden;
}

.timelineRuler {
	display: flex;
	flex-direction: column;
}

.timelineIcon {
	display: flex;
	align-items: center;
	justify-content: center;
	outline: none;
	width: 80px;
	height: 80px;
	min-width: 80px;
	min-height: 80px;
	background-color: #ffffff;
	border-radius: 100%;
	border: 2px solid rgba(0, 0, 0, 0.025);
	overflow: hidden;
}

.timelineContent {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: flex-start;
	width: calc(100% - 140px);
}

.timelineCopy {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	text-align: left;
	width: 100%;
	gap: 0px;
	margin-top: 4px;
	margin-bottom: 24px;
}

.timelineCopy h2 {
	margin-top: 0px;
	margin-bottom: 0px;
}

.timelineCopy p {
	margin: 0px;
	text-align: left;
}

.timelinePhotoAlbum {
	position: relative;
	display: flex;
	flex-direction: row;
	width: 100%;
	height: 400px;
}

.timelinePhoto {
	position: absolute;
	border-radius: 24px;
	border: #ffffff 8px solid;
	box-shadow: 0px 3px 30px 0px rgba(0, 0, 0, .025);
	width: 35%;
	cursor: url('../js/IntenseImages/plus_cursor.png') 25 25, auto;
}

#cardZoom {
	cursor: url('../js/IntenseImages/plus_cursor.png') 25 25, auto;
}

#cardLinkOut {
	cursor: pointer;
}

.carousel-container {
    overflow: hidden;
	position: relative;
    width: 100%;
	transition: transform 0.5s ease;
	padding-bottom: 24px;
}

.carousel-slider, .carousel-slider2, .carousel-slider3 {
    display: flex;
    transition: transform 0.5s ease;
	z-index: 900;
	padding-left: 24px;
	padding-right: 24px;
}

.carousel-item {
    min-width: 450px;
    padding: 0px;
    box-sizing: border-box;
    text-align: center;
}

.carouselButtonPrev {
	position: absolute; 
	display: flex;
	align-items: center;
	justify-content: center;
	top: 45%;
	left: 6px;
	transform: translateY(-55%);
	z-index: 500;
	color: black;
	transition: opacity 0.5s ease-in-out;
  	opacity: 0;
  	visibility: hidden;
	height: 70px;
	width: 70px;
	border-radius: 100%;
	backdrop-filter: blur(80px);
	-webkit-backdrop-filter: blur(35px);
	background-color: rgba(255, 255, 255, 0.75);
	box-shadow: 0px 3px 30px 0px rgba(0, 0, 0, .025);
	border: solid rgba(0, 0, 0, .03);
}

.carouselButtonNext {
	position: absolute;
	display: flex;
	align-items: center;
	justify-content: center;
	top: 45%;
	right: 6px; 
	transform: translateY(-55%);
	z-index: 500;
	color: black;
	transition: opacity 0.5s ease-in-out;
	opacity: 1;
	visibility: visible;
	height: 70px;
	width: 70px;
	overflow: hidden;
	border-radius: 100%;
	backdrop-filter: blur(80px);
	-webkit-backdrop-filter: blur(35px);
	background-color: rgba(255, 255, 255, 0.75);
	box-shadow: 0px 3px 30px 0px rgba(0, 0, 0, .025);
	border: solid rgba(0, 0, 0, .03);
}

.ContentContainer {
	position: absolute;
	z-index: 500;
	top: 0px;
	left: 0px;
	display: flex;
	flex-direction: column;
	align-items: center;
	width:100%;
	padding-bottom: 80px;
}

.ampersand {
	display: inline-block;
	font-family: "Playfair Display SC", serif;
	font-weight: 700;
	font-style: italic;
	padding-right: 2px;
	line-height: 0%;
}

.Name {
	padding-left: 35px;
	font-family: "Homemade Apple", cursive;
	font-weight: 500;
	letter-spacing: 0px;
	font-size: 18px;
	line-height: 1.5;
}	

.footer {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	width: 100%;
	min-height: 200px;
}

.footerIconRow {
	display: flex;
	flex-direction: row;
}

button {
	display: flex;
	align-items: center;
	justify-content: center;
	text-decoration: none;
	height: 60px;
	text-align: center;
	outline: none;
	border: none;
	cursor: pointer;
	background-color: #ffffff;
	border-radius: 30px;
	color: #000000;
	padding: 15px 25px 15px 25px;
	margin: 10px;
	font-family: Archivo;
	font-weight: 600;
	letter-spacing: 2px;
	font-size: 14px;	
	box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, .0);
	transition: background-color 0.25s;
	border: solid rgba(0, 0, 0, .0);
}

button:hover {
	font-size: 14px;
	background-color: #D9F0FB;
}

.iconButton {
	display: flex;
	align-items: center;
	justify-content: center;
	height: 60px;
	width: 60px;
	border-radius: 100%;
	padding: 0px;
}
/* ... */

